--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@ body {
 	box-sizing: border-box;
 }
 .nav {
-	background: #f28ab2;
 	display: flex;
 	justify-content: space-between;
 	padding: 16px 80px;
-	background-color: #ffb19a;
+	background-color: #fbded6;
+	margin-bottom: 16px;
 }
 .logo {
 	display: flex;
@@ -32,6 +32,7 @@ body {
 .nav-link {
 	text-decoration: none;
 	padding: 8px;
+	font-weight: bold;
 	color: #000;
 	transition: color 0.3s;
 }
@@ -103,11 +104,11 @@ body {
 }
 .btn {
 	padding: 16px 32px;
-	font-size: 18px;
-	background-color: #f28ab2;
+	background-color: #fbded6;
 	border: none;
 	cursor: pointer;
 	border-radius: 8px;
+	font-weight: bold;
 	text-decoration: none;
 	color: #000;
 	text-align: center;
@@ -195,7 +196,4 @@ body {
 	text-decoration: none;
 	color: #fff;
 	transition: color 0.3s;
-}
-.footer-links a:hover {
-	color: #f28ab2;
 }
